Replace Paths.get