@@ -2,7 +2,6 @@ package org.jabref.gui.util;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Optional;
 
 public class DirectoryDialogConfiguration {
@@ -44,7 +43,7 @@ public class DirectoryDialogConfiguration {
         }
 
         public Builder withInitialDirectory(String directory) {
-            withInitialDirectory(Paths.get(directory));
+            withInitialDirectory(Path.of(directory));
             return this;
         }
     }
